Add modal window

--- a/portfolio.html
+++ b/portfolio.html
@@ -226,26 +226,44 @@
           <h3 class="h3-footer-social-box">DOŁĄCZ DO NAS</h3>
           <ul class="list-style social-media-box-footer">
             <li>
-              <a class="social-media-item social-media-item-icon-footer">
+              <a
+                class="social-media-item social-media-item-icon-footer"
+                href="#"
+              >
                 <svg width="20px" height="20px">
                   <use href="images/icons.svg#icon-instagram-2"></use>
                 </svg>
               </a>
             </li>
-            <li class="social-media-item social-media-item-icon-footer">
-              <svg width="20px" height="20px">
-                <use href="images/icons.svg#icon-twitter-1"></use>
-              </svg>
+            <li>
+              <a
+                class="social-media-item social-media-item-icon-footer"
+                href="#"
+              >
+                <svg width="20px" height="20px">
+                  <use href="images/icons.svg#icon-twitter-1"></use>
+                </svg>
+              </a>
             </li>
-            <li class="social-media-item social-media-item-icon-footer">
-              <svg width="20px" height="20px">
-                <use href="images/icons.svg#icon-facebook-1"></use>
-              </svg>
+            <li>
+              <a
+                class="social-media-item social-media-item-icon-footer"
+                href="#"
+              >
+                <svg width="20px" height="20px">
+                  <use href="images/icons.svg#icon-facebook-1"></use>
+                </svg>
+              </a>
             </li>
-            <li class="social-media-item social-media-item-icon-footer">
-              <svg width="20px" height="20px">
-                <use href="images/icons.svg#icon-linkedin-1"></use>
-              </svg>
+            <li>
+              <a
+                class="social-media-item social-media-item-icon-footer"
+                href="#"
+              >
+                <svg width="20px" height="20px">
+                  <use href="images/icons.svg#icon-linkedin-1"></use>
+                </svg>
+              </a>
             </li>
           </ul>
         </div>
