--- a/index.html
+++ b/index.html
@@ -117,19 +117,19 @@
         <div class="container">
           <h2>Czym się zajmujemy</h2>
           <ul class="list-style list-box">
-            <li class="list-item-box what-we-do-description-box">
+            <li class="list-item-box">
               <img
                 src="images/box1.jpg"
                 alt="Coding"
                 width="370"
                 height="294"
               />
-              <p class="what-we-do-description">Aplikacje komputerowe</p>
+              <p>Aplikacje komputerowe</p>
             </li>
-            <li class="list-item-box what-we-do-description-box">
+            <li class="list-item-box">
               <img src="images/box2.jpg" alt="Apps" width="370" height="294" />
             </li>
-            <li class="list-item-box what-we-do-description-box">
+            <li class="list-item-box">
               <img
                 src="images/box3.jpg"
                 alt="Graphics"
@@ -156,37 +156,45 @@
                   <h4 class="specialist-name">John Doe</h4>
                   <a class="specialization-name">Product Designer</a>
                   <ul class="list-style social-media-box">
-                    <li
-                      href="#"
-                      class="social-media-item social-media-item-icon"
-                    >
-                      <svg width="20px" height="20px">
-                        <use href="images/icons.svg#icon-instagram-2"></use>
-                      </svg>
+                    <li>
+                      <a
+                        class="social-media-item social-media-item-icon"
+                        href="#"
+                      >
+                        <svg width="20px" height="20px">
+                          <use href="images/icons.svg#icon-instagram-2"></use>
+                        </svg>
+                      </a>
                     </li>
-                    <li
-                      href="#"
-                      class="social-media-item social-media-item-icon"
-                    >
-                      <svg width="20px" height="20px">
-                        <use href="images/icons.svg#icon-twitter-1"></use>
-                      </svg>
+                    <li>
+                      <a
+                        class="social-media-item-icon social-media-item"
+                        href="#"
+                      >
+                        <svg width="20px" height="20px">
+                          <use href="images/icons.svg#icon-twitter-1"></use>
+                        </svg>
+                      </a>
                     </li>
-                    <li
-                      href="#"
-                      class="social-media-item social-media-item-icon"
-                    >
-                      <svg width="20px" height="20px">
-                        <use href="images/icons.svg#icon-facebook-1"></use>
-                      </svg>
+                    <li>
+                      <a
+                        class="social-media-item social-media-item-icon"
+                        href="#"
+                      >
+                        <svg width="20px" height="20px">
+                          <use href="images/icons.svg#icon-facebook-1"></use>
+                        </svg>
+                      </a>
                     </li>
-                    <li
-                      href="#"
-                      class="social-media-item social-media-item-icon"
-                    >
-                      <svg width="20px" height="20px">
-                        <use href="images/icons.svg#icon-linkedin-1"></use>
-                      </svg>
+                    <li>
+                      <a
+                        class="social-media-item social-media-item-icon"
+                        href="#"
+                      >
+                        <svg width="20px" height="20px">
+                          <use href="images/icons.svg#icon-linkedin-1"></use>
+                        </svg>
+                      </a>
                     </li>
                   </ul>
                 </figcaption>
@@ -204,37 +212,45 @@
                   <h4 class="specialist-name">John Doe</h4>
                   <a class="specialization-name">Frontend Developer</a>
                   <ul class="list-style social-media-box">
-                    <li
-                      href="#"
-                      class="social-media-item social-media-item-icon"
-                    >
-                      <svg width="20px" height="20px">
-                        <use href="images/icons.svg#icon-instagram-2"></use>
-                      </svg>
+                    <li>
+                      <a
+                        class="social-media-item social-media-item-icon"
+                        href="#"
+                      >
+                        <svg width="20px" height="20px">
+                          <use href="images/icons.svg#icon-instagram-2"></use>
+                        </svg>
+                      </a>
                     </li>
-                    <li
-                      href="#"
-                      class="social-media-item social-media-item-icon"
-                    >
-                      <svg width="20px" height="20px">
-                        <use href="images/icons.svg#icon-twitter-1"></use>
-                      </svg>
+                    <li>
+                      <a
+                        class="social-media-item-icon social-media-item"
+                        href="#"
+                      >
+                        <svg width="20px" height="20px">
+                          <use href="images/icons.svg#icon-twitter-1"></use>
+                        </svg>
+                      </a>
                     </li>
-                    <li
-                      href="#"
-                      class="social-media-item social-media-item-icon"
-                    >
-                      <svg width="20px" height="20px">
-                        <use href="images/icons.svg#icon-facebook-1"></use>
-                      </svg>
+                    <li>
+                      <a
+                        class="social-media-item social-media-item-icon"
+                        href="#"
+                      >
+                        <svg width="20px" height="20px">
+                          <use href="images/icons.svg#icon-facebook-1"></use>
+                        </svg>
+                      </a>
                     </li>
-                    <li
-                      href="#"
-                      class="social-media-item social-media-item-icon"
-                    >
-                      <svg width="20px" height="20px">
-                        <use href="images/icons.svg#icon-linkedin-1"></use>
-                      </svg>
+                    <li>
+                      <a
+                        class="social-media-item social-media-item-icon"
+                        href="#"
+                      >
+                        <svg width="20px" height="20px">
+                          <use href="images/icons.svg#icon-linkedin-1"></use>
+                        </svg>
+                      </a>
                     </li>
                   </ul>
                 </figcaption>
@@ -252,37 +268,45 @@
                   <h4 class="specialist-name">John Doe</h4>
                   <a class="specialization-name">Marketing</a>
                   <ul class="list-style social-media-box">
-                    <li
-                      href="#"
-                      class="social-media-item social-media-item-icon"
-                    >
-                      <svg width="20px" height="20px">
-                        <use href="images/icons.svg#icon-instagram-2"></use>
-                      </svg>
+                    <li>
+                      <a
+                        class="social-media-item social-media-item-icon"
+                        href="#"
+                      >
+                        <svg width="20px" height="20px">
+                          <use href="images/icons.svg#icon-instagram-2"></use>
+                        </svg>
+                      </a>
                     </li>
-                    <li
-                      href="#"
-                      class="social-media-item social-media-item-icon"
-                    >
-                      <svg width="20px" height="20px">
-                        <use href="images/icons.svg#icon-twitter-1"></use>
-                      </svg>
+                    <li>
+                      <a
+                        class="social-media-item-icon social-media-item"
+                        href="#"
+                      >
+                        <svg width="20px" height="20px">
+                          <use href="images/icons.svg#icon-twitter-1"></use>
+                        </svg>
+                      </a>
                     </li>
-                    <li
-                      href="#"
-                      class="social-media-item social-media-item-icon"
-                    >
-                      <svg width="20px" height="20px">
-                        <use href="images/icons.svg#icon-facebook-1"></use>
-                      </svg>
+                    <li>
+                      <a
+                        class="social-media-item social-media-item-icon"
+                        href="#"
+                      >
+                        <svg width="20px" height="20px">
+                          <use href="images/icons.svg#icon-facebook-1"></use>
+                        </svg>
+                      </a>
                     </li>
-                    <li
-                      href="#"
-                      class="social-media-item social-media-item-icon"
-                    >
-                      <svg width="20px" height="20px">
-                        <use href="images/icons.svg#icon-linkedin-1"></use>
-                      </svg>
+                    <li>
+                      <a
+                        class="social-media-item social-media-item-icon"
+                        href="#"
+                      >
+                        <svg width="20px" height="20px">
+                          <use href="images/icons.svg#icon-linkedin-1"></use>
+                        </svg>
+                      </a>
                     </li>
                   </ul>
                 </figcaption>
@@ -300,37 +324,45 @@
                   <h4 class="specialist-name">John Doe</h4>
                   <a class="specialization-name">UI designer</a>
                   <ul class="list-style social-media-box">
-                    <li
-                      href="#"
-                      class="social-media-item social-media-item-icon"
-                    >
-                      <svg width="20px" height="20px">
-                        <use href="images/icons.svg#icon-instagram-2"></use>
-                      </svg>
+                    <li>
+                      <a
+                        class="social-media-item social-media-item-icon"
+                        href="#"
+                      >
+                        <svg width="20px" height="20px">
+                          <use href="images/icons.svg#icon-instagram-2"></use>
+                        </svg>
+                      </a>
                     </li>
-                    <li
-                      href="#"
-                      class="social-media-item social-media-item-icon"
-                    >
-                      <svg width="20px" height="20px">
-                        <use href="images/icons.svg#icon-twitter-1"></use>
-                      </svg>
+                    <li>
+                      <a
+                        class="social-media-item-icon social-media-item"
+                        href="#"
+                      >
+                        <svg width="20px" height="20px">
+                          <use href="images/icons.svg#icon-twitter-1"></use>
+                        </svg>
+                      </a>
                     </li>
-                    <li
-                      href="#"
-                      class="social-media-item social-media-item-icon"
-                    >
-                      <svg width="20px" height="20px">
-                        <use href="images/icons.svg#icon-facebook-1"></use>
-                      </svg>
+                    <li>
+                      <a
+                        class="social-media-item social-media-item-icon"
+                        href="#"
+                      >
+                        <svg width="20px" height="20px">
+                          <use href="images/icons.svg#icon-facebook-1"></use>
+                        </svg>
+                      </a>
                     </li>
-                    <li
-                      href="#"
-                      class="social-media-item social-media-item-icon"
-                    >
-                      <svg width="20px" height="20px">
-                        <use href="images/icons.svg#icon-linkedin-1"></use>
-                      </svg>
+                    <li>
+                      <a
+                        class="social-media-item social-media-item-icon"
+                        href="#"
+                      >
+                        <svg width="20px" height="20px">
+                          <use href="images/icons.svg#icon-linkedin-1"></use>
+                        </svg>
+                      </a>
                     </li>
                   </ul>
                 </figcaption>
@@ -343,35 +375,47 @@
         <div class="container">
           <h2>Nasi klienci</h2>
           <ul class="list-style list-box">
-            <li class="customer-list customer-box-item">
-              <svg width="106px">
-                <use href="images/icons.svg#icon-Logo"></use>
-              </svg>
+            <li>
+              <a class="customer-list customer-box-item" href="#">
+                <svg width="106px">
+                  <use href="images/icons.svg#icon-Logo"></use>
+                </svg>
+              </a>
             </li>
-            <li class="customer-list customer-box-item">
-              <svg width="106px">
-                <use href="images/icons.svg#icon-Logo-1"></use>
-              </svg>
+            <li>
+              <a class="customer-list customer-box-item" href="#">
+                <svg width="106px">
+                  <use href="images/icons.svg#icon-Logo-1"></use>
+                </svg>
+              </a>
             </li>
-            <li class="customer-list customer-box-item">
-              <svg width="106px">
-                <use href="images/icons.svg#icon-Logo-2"></use>
-              </svg>
+            <li>
+              <a class="customer-list customer-box-item" href="#">
+                <svg width="106px">
+                  <use href="images/icons.svg#icon-Logo-2"></use>
+                </svg>
+              </a>
             </li>
-            <li class="customer-list customer-box-item">
-              <svg width="106px">
-                <use href="images/icons.svg#icon-Logo-3"></use>
-              </svg>
+            <li>
+              <a class="customer-list customer-box-item" href="#">
+                <svg width="106px">
+                  <use href="images/icons.svg#icon-Logo-3"></use>
+                </svg>
+              </a>
             </li>
-            <li class="customer-list customer-box-item">
-              <svg width="106px">
-                <use href="images/icons.svg#icon-Logo-4"></use>
-              </svg>
+            <li>
+              <a class="customer-list customer-box-item" href="#">
+                <svg width="106px">
+                  <use href="images/icons.svg#icon-Logo-4"></use>
+                </svg>
+              </a>
             </li>
-            <li class="customer-list customer-box-item">
-              <svg width="106px">
-                <use href="images/icons.svg#icon-Logo-5"></use>
-              </svg>
+            <li>
+              <a class="customer-list customer-box-item" href="#">
+                <svg width="106px">
+                  <use href="images/icons.svg#icon-Logo-5"></use>
+                </svg>
+              </a>
             </li>
           </ul>
         </div>
@@ -400,26 +444,44 @@
           <h3 class="h3-footer-social-box">DOŁĄCZ DO NAS</h3>
           <ul class="list-style social-media-box-footer">
             <li>
-              <a class="social-media-item social-media-item-icon-footer">
+              <a
+                class="social-media-item social-media-item-icon-footer"
+                href="#"
+              >
                 <svg width="20px" height="20px">
                   <use href="images/icons.svg#icon-instagram-2"></use>
                 </svg>
               </a>
             </li>
-            <li class="social-media-item social-media-item-icon-footer">
-              <svg width="20px" height="20px">
-                <use href="images/icons.svg#icon-twitter-1"></use>
-              </svg>
+            <li>
+              <a
+                class="social-media-item social-media-item-icon-footer"
+                href="#"
+              >
+                <svg width="20px" height="20px">
+                  <use href="images/icons.svg#icon-twitter-1"></use>
+                </svg>
+              </a>
             </li>
-            <li class="social-media-item social-media-item-icon-footer">
-              <svg width="20px" height="20px">
-                <use href="images/icons.svg#icon-facebook-1"></use>
-              </svg>
+            <li>
+              <a
+                class="social-media-item social-media-item-icon-footer"
+                href="#"
+              >
+                <svg width="20px" height="20px">
+                  <use href="images/icons.svg#icon-facebook-1"></use>
+                </svg>
+              </a>
             </li>
-            <li class="social-media-item social-media-item-icon-footer">
-              <svg width="20px" height="20px">
-                <use href="images/icons.svg#icon-linkedin-1"></use>
-              </svg>
+            <li>
+              <a
+                class="social-media-item social-media-item-icon-footer"
+                href="#"
+              >
+                <svg width="20px" height="20px">
+                  <use href="images/icons.svg#icon-linkedin-1"></use>
+                </svg>
+              </a>
             </li>
           </ul>
         </div>
