--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           ><span class="logo-studio">Studio</span></a
         >
         <nav class="nav-box">
-          <a class="header-text" href="#">Agencja</a>
+          <a class="header-text nav-link-active" href="index.html">Agencja</a>
           <a class="header-text" href="portfolio.html">Portfolio</a>
           <a class="header-text" href="#">Kontakt</a>
         </nav>
@@ -118,24 +118,37 @@
           <h2>Czym się zajmujemy</h2>
           <ul class="list-style list-box">
             <li class="list-item-box">
-              <img
-                src="images/box1.jpg"
-                alt="Coding"
-                width="370"
-                height="294"
-              />
-              <p>Aplikacje komputerowe</p>
+              <a class="what-we-do-box">
+                <img
+                  src="images/box1.jpg"
+                  alt="Coding"
+                  width="370"
+                  height="294"
+                />
+                <p class="what-we-do-paragraph">APLIKACJE KOMPUTEROWE</p>
+              </a>
             </li>
             <li class="list-item-box">
-              <img src="images/box2.jpg" alt="Apps" width="370" height="294" />
+              <a class="what-we-do-box">
+                <img
+                  src="images/box2.jpg"
+                  alt="Apps"
+                  width="370"
+                  height="294"
+                />
+                <p class="what-we-do-paragraph">APLIKACJE MOBILNE</p>
+              </a>
             </li>
             <li class="list-item-box">
-              <img
-                src="images/box3.jpg"
-                alt="Graphics"
-                width="370"
-                height="294"
-              />
+              <a class="what-we-do-box">
+                <img
+                  src="images/box3.jpg"
+                  alt="Graphics"
+                  width="370"
+                  height="294"
+                />
+                <p class="what-we-do-paragraph">ROZWIĄZANIA GRAFICZNE</p>
+              </a>
             </li>
           </ul>
         </div>
