--- a/portfolio.html
+++ b/portfolio.html
@@ -28,8 +28,10 @@
           ><span class="logo-studio">Studio</span></a
         >
         <nav class="nav-box">
-          <a class="header-text" href="#">Agencja</a>
-          <a class="header-text" href="portfolio.html">Portfolio</a>
+          <a class="header-text" href="index.html">Agencja</a>
+          <a class="header-text nav-link-active" href="portfolio.html"
+            >Portfolio</a
+          >
           <a class="header-text" href="#">Kontakt</a>
         </nav>
         <div class="contact-box">
@@ -71,12 +73,22 @@
           <ul class="list-style list-box-portfolio">
             <li class="list-box-portfolio-item">
               <figure>
-                <img
-                  src="images/technocrack.jpg"
-                  alt="Technocrack"
-                  width="370"
-                  height="294"
-                />
+                <div class="blue-window-portfolio-box-one">
+                  <img
+                    src="images/technocrack.jpg"
+                    alt="Technocrack"
+                    width="370"
+                    height="294"
+                  />
+                  <div class="blue-window-portfolio-box-two">
+                    <p>
+                      Technocrack jest popularną platformą wykorzystywaną do
+                      rozpowszechniania koronawirusa. Firmy wykorzystują tę
+                      platformę do celów szpiegowskich i ataków na
+                      niezabezpieczone serwery konkurencji
+                    </p>
+                  </div>
+                </div>
                 <figcaption class="list-box-portfolio-item-text">
                   <h4 class="portfolio-icon-title">Technocrack</h4>
                   <a class="property-name">Strona internetowa</a>
@@ -85,12 +97,22 @@
             </li>
             <li class="list-box-portfolio-item">
               <figure>
-                <img
-                  src="images/neworleanvsgoldenstar.jpg"
-                  alt="Grafika New Orlean vs Golden Star"
-                  width="370"
-                  height="294"
-                />
+                <div class="blue-window-portfolio-box-one">
+                  <img
+                    src="images/neworleanvsgoldenstar.jpg"
+                    alt="Grafika New Orlean vs Golden Star"
+                    width="370"
+                    height="294"
+                  />
+                  <div class="blue-window-portfolio-box-two">
+                    <p>
+                      Technocrack jest popularną platformą wykorzystywaną do
+                      rozpowszechniania koronawirusa. Firmy wykorzystują tę
+                      platformę do celów szpiegowskich i ataków na
+                      niezabezpieczone serwery konkurencji
+                    </p>
+                  </div>
+                </div>
                 <figcaption class="list-box-portfolio-item-text">
                   <h4 class="portfolio-icon-title">
                     Grafika New Orlean vs Golden Star
@@ -101,12 +123,22 @@
             </li>
             <li class="list-box-portfolio-item">
               <figure>
-                <img
-                  src="images/restauracjaseafood.jpg"
-                  alt="Logo Restauracja Seafood"
-                  width="370"
-                  height="294"
-                />
+                <div class="blue-window-portfolio-box-one">
+                  <img
+                    src="images/restauracjaseafood.jpg"
+                    alt="Logo Restauracja Seafood"
+                    width="370"
+                    height="294"
+                  />
+                  <div class="blue-window-portfolio-box-two">
+                    <p>
+                      Technocrack jest popularną platformą wykorzystywaną do
+                      rozpowszechniania koronawirusa. Firmy wykorzystują tę
+                      platformę do celów szpiegowskich i ataków na
+                      niezabezpieczone serwery konkurencji
+                    </p>
+                  </div>
+                </div>
                 <figcaption class="list-box-portfolio-item-text">
                   <h4 class="portfolio-icon-title">Restauracja Seafood</h4>
                   <a class="property-name">Aplikacja</a>
@@ -115,12 +147,22 @@
             </li>
             <li class="list-box-portfolio-item">
               <figure>
-                <img
-                  src="images/projektprime.jpg"
-                  alt="Headphones"
-                  width="370"
-                  height="294"
-                />
+                <div class="blue-window-portfolio-box-one">
+                  <img
+                    src="images/projektprime.jpg"
+                    alt="Headphones"
+                    width="370"
+                    height="294"
+                  />
+                  <div class="blue-window-portfolio-box-two">
+                    <p>
+                      Technocrack jest popularną platformą wykorzystywaną do
+                      rozpowszechniania koronawirusa. Firmy wykorzystują tę
+                      platformę do celów szpiegowskich i ataków na
+                      niezabezpieczone serwery konkurencji
+                    </p>
+                  </div>
+                </div>
                 <figcaption class="list-box-portfolio-item-text">
                   <h4 class="portfolio-icon-title">Projekt Prime</h4>
                   <a class="property-name">Marketing</a>
@@ -129,12 +171,22 @@
             </li>
             <li class="list-box-portfolio-item">
               <figure>
-                <img
-                  src="images/projektboxes.jpg"
-                  alt="Boxes"
-                  width="370"
-                  height="294"
-                />
+                <div class="blue-window-portfolio-box-one">
+                  <img
+                    src="images/projektboxes.jpg"
+                    alt="Boxes"
+                    width="370"
+                    height="294"
+                  />
+                  <div class="blue-window-portfolio-box-two">
+                    <p>
+                      Technocrack jest popularną platformą wykorzystywaną do
+                      rozpowszechniania koronawirusa. Firmy wykorzystują tę
+                      platformę do celów szpiegowskich i ataków na
+                      niezabezpieczone serwery konkurencji
+                    </p>
+                  </div>
+                </div>
                 <figcaption class="list-box-portfolio-item-text">
                   <h4 class="portfolio-icon-title">Projekt Boxes</h4>
                   <a class="property-name">Aplikacja</a>
@@ -143,12 +195,22 @@
             </li>
             <li class="list-box-portfolio-item">
               <figure>
-                <img
-                  src="images/inspirationhasnoborders.jpg"
-                  alt="Website"
-                  width="370"
-                  height="294"
-                />
+                <div class="blue-window-portfolio-box-one">
+                  <img
+                    src="images/inspirationhasnoborders.jpg"
+                    alt="Website"
+                    width="370"
+                    height="294"
+                  />
+                  <div class="blue-window-portfolio-box-two">
+                    <p>
+                      Technocrack jest popularną platformą wykorzystywaną do
+                      rozpowszechniania koronawirusa. Firmy wykorzystują tę
+                      platformę do celów szpiegowskich i ataków na
+                      niezabezpieczone serwery konkurencji
+                    </p>
+                  </div>
+                </div>
                 <figcaption class="list-box-portfolio-item-text">
                   <h4 class="portfolio-icon-title">
                     Inspiration has no Borders
@@ -159,12 +221,22 @@
             </li>
             <li class="list-box-portfolio-item">
               <figure>
-                <img
-                  src="images/magazynlimitededition.jpg"
-                  alt="Magazine page"
-                  width="370"
-                  height="294"
-                />
+                <div class="blue-window-portfolio-box-one">
+                  <img
+                    src="images/magazynlimitededition.jpg"
+                    alt="Magazine page"
+                    width="370"
+                    height="294"
+                  />
+                  <div class="blue-window-portfolio-box-two">
+                    <p>
+                      Technocrack jest popularną platformą wykorzystywaną do
+                      rozpowszechniania koronawirusa. Firmy wykorzystują tę
+                      platformę do celów szpiegowskich i ataków na
+                      niezabezpieczone serwery konkurencji
+                    </p>
+                  </div>
+                </div>
                 <figcaption class="list-box-portfolio-item-text">
                   <h4 class="portfolio-icon-title">Magazyn Limited Edition</h4>
                   <a class="property-name">Dizajn</a>
@@ -173,12 +245,22 @@
             </li>
             <li class="list-box-portfolio-item">
               <figure>
-                <img
-                  src="images/projektlab.jpg"
-                  alt="Projekt LAB"
-                  width="370"
-                  height="294"
-                />
+                <div class="blue-window-portfolio-box-one">
+                  <img
+                    src="images/projektlab.jpg"
+                    alt="Projekt LAB"
+                    width="370"
+                    height="294"
+                  />
+                  <div class="blue-window-portfolio-box-two">
+                    <p>
+                      Technocrack jest popularną platformą wykorzystywaną do
+                      rozpowszechniania koronawirusa. Firmy wykorzystują tę
+                      platformę do celów szpiegowskich i ataków na
+                      niezabezpieczone serwery konkurencji
+                    </p>
+                  </div>
+                </div>
                 <figcaption class="list-box-portfolio-item-text">
                   <h4 class="portfolio-icon-title">Projekt LAB</h4>
                   <a class="property-name">Marketing</a>
@@ -187,12 +269,22 @@
             </li>
             <li class="list-box-portfolio-item">
               <figure>
-                <img
-                  src="images/growingbusiness.jpg"
-                  alt="Website Apps of Growing Business"
-                  width="370"
-                  height="294"
-                />
+                <div class="blue-window-portfolio-box-one">
+                  <img
+                    src="images/growingbusiness.jpg"
+                    alt="Website Apps of Growing Business"
+                    width="370"
+                    height="294"
+                  />
+                  <div class="blue-window-portfolio-box-two">
+                    <p>
+                      Technocrack jest popularną platformą wykorzystywaną do
+                      rozpowszechniania koronawirusa. Firmy wykorzystują tę
+                      platformę do celów szpiegowskich i ataków na
+                      niezabezpieczone serwery konkurencji
+                    </p>
+                  </div>
+                </div>
                 <figcaption class="list-box-portfolio-item-text">
                   <h4 class="portfolio-icon-title">Growing Business</h4>
                   <a class="property-name">Aplikacja</a>
